View Issue Details

IDProjectCategoryView StatusLast Update
0027819Open CASCADEOCCT:Visualizationpublic2016-12-09 16:40
ReportervpaAssigned Tobugmaster  
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027819: Visualization - provide a possibility to redefine SelectMgr_SelectableObject::UpdateSelection
DescriptionIn applications sometimes it is useful to have own implementation of SelectMgr_SelectableObject::UpdateSelection (const Standard_Integer theMode = -1) in order to perform custom preprocessing step before the update.

Therefore, it is necessary to make the method virtual.
Steps To Reproducenot needed
TagsNo tags attached.
Test case numberNot needed

Activities

git

2016-08-29 18:55

administrator   ~0057272

Branch CR27819 has been created by vpa.

SHA-1: 9cc3a87f951e6e8da257cf2ed2c2482ae76b93be


Detailed log of new commits:

Author: vpa
Date: Mon Aug 29 18:56:44 2016 +0300

    0027819: Visualization - provide a possibility to redefine SelectMgr_SelectableObject::UpdateSelection
    
    - SelectMgr_SelectableObject::UpdateSelection is now virtual

vpa

2016-08-29 18:57

developer   ~0057273

Dear Kirill,

the patch in branch CR27819 is ready to be reviewed.

kgv

2016-08-31 12:07

developer   ~0057320

This is bad design defining virtual function with default arguments - please define additional protected virtual method updateSelection() without default argument values.

git

2016-08-31 16:54

administrator   ~0057350

Branch CR27819 has been updated forcibly by vpa.

SHA-1: bd7e7fc878050495fa1d9594e147400c35969128

vpa

2016-08-31 16:54

developer   ~0057351

Dear Kirill,

the updated patch in branch CR27819 is ready to be reviewed.

git

2016-08-31 17:11

administrator   ~0057353

Branch CR27819 has been updated forcibly by vpa.

SHA-1: 6e4feb9a6f9f2a082be7e321d8f2180da918b14c

git

2016-08-31 17:46

administrator   ~0057357

Branch CR27819 has been updated forcibly by vpa.

SHA-1: 434d89c346f33767a4efb1cd118c49b9fd9cbee6

kgv

2016-08-31 17:51

developer   ~0057358

Please check compilation, regression testing is not needed.

mkv

2016-09-01 14:09

tester   ~0057382

Dear BugMaster,
Branch CR27819 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 434d89c346f33767a4efb1cd118c49b9fd9cbee6

There are following compilation errors:

Windows:
http://jenkins-test-07.nnov.opencascade.com:8080/view/CR27819-master/job/CR27819-master-Products-Windows-64-VC10-csharp-samples/2/parsed_console/
d:\install\CR27819-master\Windows-64-VC10-opt\Products\samples\csharp\OCCCSharp\Wrappers\AIS_CustomInteractiveObject.cs(92,5): error CS0103: The name 'updateSelection' does not exist in the current context

http://jenkins-test-07.nnov.opencascade.com:8080/view/CR27819-master/job/CR27819-master-Products-Windows-64-VC10-java-samples/2/parsed_console/
Compile Java wrappers
OCCwrapJavaJNI.java:21696: error: cannot find symbol
    jself.updateSelection(theMode);
         ^
  symbol: method updateSelection(int)
  location: variable jself of type AIS_CustomInteractiveObject

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1152

mkv

2016-09-01 14:09

tester   ~0057383

Dear vpa,
Branch CR27819 has been rejected due to:
- compilation errors

vpa

2016-09-01 17:32

developer   ~0057397

Dear Bugmaster,

branch CR27819 was created in OCCT Products git repository. Please, check compilation.

mkv

2016-09-02 14:31

tester   ~0057418

Dear BugMaster,
Branch CR27819 from products git-repository was recompiled on Linux, MacOS and Windows platforms on Release mode.
SHA-1: ca4bab832be1eaf16e15f194c4b06135b5d3966d

Compilation errors are fixed.

mkv

2016-09-02 14:32

tester   ~0057419

Dear BugMaster,
Branch CR27819 is TESTED.

git

2016-10-28 21:48

administrator   ~0059574

Branch CR27819 has been deleted by kgv.

SHA-1: 434d89c346f33767a4efb1cd118c49b9fd9cbee6

Related Changesets

occt: master 21a2b7cc

2016-08-31 14:42:50

vpa


Committer: bugmaster Details Diff
0027819: Visualization - provide a possibility to redefine SelectMgr_SelectableObject::UpdateSelection

- SelectMgr_SelectableObject::UpdateSelection calls redefineable SelectMgr_SelectableObject::updateSelection
Affected Issues
0027819
mod - src/SelectMgr/FILES Diff File
mod - src/SelectMgr/SelectMgr_SelectableObject.cxx Diff File
mod - src/SelectMgr/SelectMgr_SelectableObject.hxx Diff File
rm - src/SelectMgr/SelectMgr_SelectableObject.lxx Diff File

Issue History

Date Modified Username Field Change
2016-08-29 14:42 vpa New Issue
2016-08-29 14:42 vpa Assigned To => kgv
2016-08-29 14:42 vpa Assigned To kgv => vpa
2016-08-29 14:42 vpa Status new => assigned
2016-08-29 14:43 vpa Description Updated
2016-08-29 18:55 git Note Added: 0057272
2016-08-29 18:57 vpa Note Added: 0057273
2016-08-29 18:57 vpa Assigned To vpa => kgv
2016-08-29 18:57 vpa Status assigned => resolved
2016-08-29 18:57 vpa Steps to Reproduce Updated
2016-08-31 12:07 kgv Note Added: 0057320
2016-08-31 12:07 kgv Assigned To kgv => vpa
2016-08-31 12:07 kgv Status resolved => assigned
2016-08-31 16:54 git Note Added: 0057350
2016-08-31 16:54 vpa Note Added: 0057351
2016-08-31 16:54 vpa Assigned To vpa => kgv
2016-08-31 16:54 vpa Status assigned => resolved
2016-08-31 17:11 git Note Added: 0057353
2016-08-31 17:46 git Note Added: 0057357
2016-08-31 17:51 kgv Note Added: 0057358
2016-08-31 17:51 kgv Assigned To kgv => bugmaster
2016-08-31 17:51 kgv Status resolved => reviewed
2016-08-31 17:51 kgv Severity minor => feature
2016-08-31 17:51 kgv Product Version 7.0.0 =>
2016-08-31 17:54 mkv Assigned To bugmaster => mkv
2016-09-01 14:09 mkv Note Added: 0057382
2016-09-01 14:09 mkv Note Added: 0057383
2016-09-01 14:09 mkv Assigned To mkv => vpa
2016-09-01 14:09 mkv Status reviewed => assigned
2016-09-01 14:09 mkv Test case number => Not needed
2016-09-01 17:31 vpa Status assigned => resolved
2016-09-01 17:32 vpa Note Added: 0057397
2016-09-01 17:32 vpa Assigned To vpa => bugmaster
2016-09-01 17:32 vpa Status resolved => reviewed
2016-09-01 17:51 mkv Assigned To bugmaster => mkv
2016-09-02 14:31 mkv Note Added: 0057418
2016-09-02 14:32 mkv Note Added: 0057419
2016-09-02 14:32 mkv Assigned To mkv => bugmaster
2016-09-02 14:32 mkv Status reviewed => tested
2016-09-09 09:40 bugmaster Changeset attached => occt master 21a2b7cc
2016-09-09 09:40 bugmaster Status tested => verified
2016-09-09 09:40 bugmaster Resolution open => fixed
2016-10-28 21:48 git Note Added: 0059574
2016-12-09 16:29 aiv Status verified => closed
2016-12-09 16:40 aiv Fixed in Version => 7.1.0