0027819: Visualization - provide a possibility to redefine SelectMgr_SelectableObject::UpdateSelection

- SelectMgr_SelectableObject::UpdateSelection calls redefineable SelectMgr_SelectableObject::updateSelection